<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"/>


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="welcome to "
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/blog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Photo Blog "
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/email_margin_top"
        android:gravity="center">

        <EditText
            android:id="@+id/login_mail"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="@dimen/edittext_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/email_margin_top"
            android:autofillHints="@string/autofill_email"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_mail"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/drawable_padding"
            android:textColorHint="@color/colorFontGrey" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/login_password_layout"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@+id/email_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/password_margin_top"
        android:gravity="center"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorFontGrey">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="@dimen/edittext_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/password_margin_top"
            android:autofillHints="@string/autofill_password"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/drawable_padding"
            android:textColorHint="@color/colorFontGrey" />
    </android.support.design.widget.TextInputLayout>


    <FrameLayout
        android:id="@+id/button_frame"
        android:layout_width="@dimen/btnframe_width"
        android:layout_height="@dimen/btnframe_height"
        android:layout_alignStart="@+id/sign_in"
        android:layout_alignTop="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_button"
        android:orientation="vertical">

    </FrameLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/btnframe_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:background="?android:attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/border_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorFontGrey" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/or_string"
            android:textColor="@android:color/white" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="@dimen/btnframe_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />


    </RelativeLayout>




</RelativeLayout>